[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kona-db"
version = "1.0.0"
description = "A MySQL-compatible database engine for Python with AI-powered features, supporting structured and unstructured data."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Kona", email = "kona@example.com"},
]
keywords = ["database", "sql", "mysql", "nosql", "document-store", "ai", "query-engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
kona = "kona.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]

[project.urls]
Homepage = "https://github.com/konaaravind4/kona-db"
Repository = "https://github.com/konaaravind4/kona-db"
Issues = "https://github.com/konaaravind4/kona-db/issues"
Documentation = "https://github.com/konaaravind4/kona-db#readme"

[tool.setuptools.packages.find]
include = ["kona*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
